--- a/style.css
+++ b/style.css
@@ -81,3 +81,6 @@ header a {
 #contact {
     background-image: linear-gradient(rgba(255,255,255,0.75),rgba(255,255,255,0.75)), url('https://codetheweb.blog/assets/img/posts/steps-to-creating-a-website/canyon.jpg');
 }
+#projects {
+    background-image: linear-gradient(rgba(255,255,255,0.75),rgba(255,255,255,0.75)),url('https://blog.edx.org/wp-content/uploads/2015/07/Computer-Programming2.png');
+}
