--- a/style.css
+++ b/style.css
@@ -64,6 +64,10 @@ section h3 {
     font-size: 1.5em;
 }
 
+section h4 {
+    font-size: 1em;
+}
+
 header a {
     text-decoration: none;
     color: black;
