--- a/style.css
+++ b/style.css
@@ -86,6 +86,6 @@ header a {
     background-image: linear-gradient(rgba(255,255,255,0.75),rgba(255,255,255,0.75)), url('https://codetheweb.blog/assets/img/posts/steps-to-creating-a-website/canyon.jpg');
 }
 #projects {
-     background-image: linear-gradient(rgba(255,255,255,0.75),rgba(255,255,255,0.75)),url('black.jpg');
+     background-image: linear-gradient(rgba(255,255,255,0.75),rgba(255,255,255,0.75)),url('download.jpg');
   
 }
