--- a/style.css
+++ b/style.css
@@ -46,7 +46,10 @@ section {
     width: 300px;
     border-radius: 50%;
 }
-
+#hero .p1-img {
+    width:300px;
+    border-radius: 50%;
+}
 footer {
     text-align: center;
     padding: 50px;
