--- a/style.css
+++ b/style.css
@@ -48,7 +48,8 @@ section {
 }
 #hero .p1-img {
     width:100px;
-    border-radius: 70%;
+    height:100px;
+    border-radius: 50%;
 }
 footer {
     text-align: center;
