--- a/style.css
+++ b/style.css
@@ -16,12 +16,17 @@ html,body {
 }
 .carousel-inner img {
 	width: 100%;
-	height: 100%;
+	height: 70%;
+}
+.carousel-item {
+	width: :100%;
+	height: 70%;
 }
 .carousel-caption {
+	color: #CA9185;
 	position: absolute;
 	top: 50%;
-	transform: translateY(-50%);
+	transform: translateY(-100%);
 }
 .carousel-caption h1 {
 	font-size: 500%;
@@ -151,7 +156,13 @@ hr.light-100 {
 }
 
 }
-
+.card {
+	height: 100%;
+	width: 100%;
+}
+.lead {
+	font-size: 100%;
+}
 body::-webkit-scrollbar {
     width: 1em;
 }
