--- a/style.css
+++ b/style.css
@@ -57,16 +57,19 @@ html,body {
 	margin-top: .3rem;
 	margin-bottom: 1rem;
 }
-.fa-code {
+.skills hr {
+
+}
+.fab-java {
 	color: #e54d26;
 }
-.fa-bold {
+.fa-database {
 	color: #563d7c;
 }
-.fa-css3 {
+.far-file {
 	color: #2163af;
 }
-.fa-code, .fa-bold, .fa-css3 {
+.fa-java, .fa-database, .fa-file {
 	font-size: 4em;
 	margin: 1rem;
 }
@@ -106,7 +109,6 @@ hr.light-100 {
 	margin-top: .8rem;
 	margin-bottom: 1rem;
 }
-
 /*---Media Queries --*/
 @media (max-width: 992px) {
 .social a {
