--- a/style.css
+++ b/style.css
@@ -4,9 +4,11 @@ html,body {
 	height: 100%;
 	width: 100%;
 	font-family: 'Poppins' , sans-serif;
+	scroll-behavior: smooth;
 }
 .navbar {
 	padding: .8rem;
+	overflow: hidden;
 }
 .navbar-nav li {
 	padding-right: 20px;
