--- a/style.css
+++ b/style.css
@@ -4,16 +4,32 @@ html,body {
 	height: 100%;
 	width: 100%;
 	font-family: 'Poppins' , sans-serif;
+	color: #d5d5d5;
+	background-color: #293137;
+
 }
 .navbar {
 	padding: .8rem;
+	color: #474b4f;
 }
 .navbar-nav li {
 	padding-right: 20px;
+	.color: white;
 }
+
 .nav-link {
 	font-size: 1.1em !important;
+	.color: white;
 }
+
+.card-text {
+	background-color: white;
+	color: #474b4f;
+}
+.card-title {
+	color: #474b6f;
+}
+
 .carousel-inner img {
 	width: 100%;
 	height: 70%;
@@ -23,10 +39,11 @@ html,body {
 	height: 70%;
 }
 .carousel-caption {
-	color: #CA9185;
+	color: white;
 	position: absolute;
 	top: 50%;
 	transform: translateY(-100%);
+	text-shadow: .1rem .1rem .8rem black;
 }
 .carousel-caption h1 {
 	font-size: 500%;
