--- a/style.css
+++ b/style.css
@@ -226,6 +226,7 @@ figure {
   width: 100%;
   height: 100%;
 }
+/*--
 #fixed {
   background-image: url('img/mac.png');
   position: fixed;
@@ -240,6 +241,7 @@ figure {
           transform: translateZ(0);
   will-change: transform;
 }
+--*/
 /*--- Bootstrap Padding Fix --*/
 [class*="col-"] {
     padding: 1rem;
